--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
-certifi>=2020.12.5
-chardet>=4.0.0
-idna>=2.10
-pyTelegramBotAPI>=3.7.5
-requests>=2.25.1
-urllib3>=1.26.2
+certifi==2021.10.8
+chardet==4.0.0
+charset-normalizer==2.0.9
+idna==3.3
+pymongo==4.0.1
+pyTelegramBotAPI==4.2.2
+requests==2.26.0
+urllib3==1.26.7
